# crm-api

./: .env  .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  app.py  database.py  docker-compose.dev.yml  fly.toml  fly_dev.toml  models.py  pyproject.toml  requirements.txt  schema.py  security.py  test.env  test_app.py  update_users_role.py  update_users_status.py  users.py  utils.py  utils_test.py
.github/workflows/: build.yml  build_and_test.yml  fly.yml  fly_dev.yml
Alembic/: env.py
Alembic/versions/: 16f0964a6fdb_add_announcements.py  182126865cf4_update_user.py  1f9ec35e8650_username_null_and_skills_user_id.py  2091f58b9340_add_socials.py  2f6e42bda54b_include_socials.py  32929f03f637_.py  64f588c86cd3_.py  (+44 more)
alembic/: env.py
api/: app.py  test_app.py
core/: config.py  exceptions.py
db/: __init__.py  database.py
routes/: auth.py
scripts/: url_mapping.json
services/: announcement_service.py  auth_service.py  coding_challenge_service.py  email_template_service.py  endpoint_service.py  feed_service.py  org_chart_service.py  project_service.py  skill_service.py  stack_service.py  tag_service.py  techieotm_service.py  technical_task_service.py  user_service.py  weekly_meeting_service.py
test/: conftest.py  database.py  test_admin.py  test_announcements.py  test_auth.py  test_coding_challenges.py  test_email_templates.py  test_endpoints_status.py  test_feeds.py  test_org_chart.py  test_profile_page.py  test_project_manager_validation.py  test_projects.py  test_s3.py  test_skill_service_response.py  test_skills.py  test_stacks.py  test_tags.py  test_techieotm.py  test_technical_task_submissions.py  test_users.py  test_utils.py  test_weekly_meetings.py  utils_test.py
utils/: cloudinary.py  endpoints_status.py  enums.py  mail_service.py  oauth2.py  permissions.py  s3.py  tools.py  utils.py
(+75 files in other folders)
