[tool.poetry]
name = "crm-api"
version = "0.1.0"
description = "CRM API for Slightly Techie"
authors = [""]
license = "Proprietory"
readme = "README.md"
packages = [{include = "crm_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.44"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
email-validator = "^1.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["crptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
