[tool.poetry]
name = "crm-api"
version = "0.1.0"
description = "CRM API for Slightly Techie"
authors = ["Slightly Techie <slightlytechie@gmail.com>"]
license = "Proprietory"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.87.0"
uvicorn = "0.19.0"
sqlalchemy = "^1.4.44"
psycopg2 = "^2.9.5"
pytest = "^7.2.0"
anyio = "3.6.2"
click = "8.1.3"
colorama = "0.4.6"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-dotenv = "^0.21.0"
sniffio = "1.3.0"
starlette = "0.21.0"
typing-extensions = "4.4.0"
watchfiles = "0.18.1"
websockets = "10.4"
httpx = "^0.23.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
alembic = "^1.9.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.9.0"

[tool.poetry.group.dev.dependencies]
email-validator = "^1.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["crptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
